Add basic UI with fully funcitonal game logic

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="cell" id="21"></div>
         <div class="cell" id="22"></div>
     </div>
+    <button onclick="startBtn()">Start a Game</button>
     <script src="index.js"></script>
 </body>
 
