Finish fully working game with end conditions

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         <div class="cell" id="20"></div>
         <div class="cell" id="21"></div>
         <div class="cell" id="22"></div>
+        <div></div>
+        <div class="btnCell"><button onclick="startBtn()">Start a Game</button></div>
     </div>
-    <button onclick="startBtn()">Start a Game</button>
+
     <script src="index.js"></script>
 </body>
 
